--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 <head>
 	<title>jmsjl</title>
+	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
 </head>
 <body>
-	<H1>jimo shi jilao</H1>
+	<center><H6>jimo shi jilao</H6></center>
+	<center><H5>jimo shi jilao</H5></center>
+	<center><H4>jimo shi jilao</H4></center>
+	<center><H3>jimo shi jilao</H3></center>
+	<center><H2>jimo shi jilao</H2></center>
+	<center><H1>即墨是基佬</H1></center>	
 </body>
 </html>
