--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>jmsjl</title>
-	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
+	<meta http-equiv="Content-Type" content="text/html; charset=gbk">
 </head>
 <body>
 	<center><H6>jimo shi jilao</H6></center>
