--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>jmsjl</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=gbk">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
 	<center><H6>jimo shi jilao</H6></center>
@@ -9,6 +9,6 @@
 	<center><H4>jimo shi jilao</H4></center>
 	<center><H3>jimo shi jilao</H3></center>
 	<center><H2>jimo shi jilao</H2></center>
-	<center><H1>即墨是基佬</H1></center>	
+	<center><H1>即墨是基佬</H1 style="color:red"></center>	
 </body>
 </html>
