--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 	<title>jmsjl</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<style type="text/css">
+		.style1 {font-size:120px;color: #FF0000}
+	</style>
 </head>
 <body>
 	<center><H6>jimo shi jilao</H6></center>
@@ -9,6 +12,7 @@
 	<center><H4>jimo shi jilao</H4></center>
 	<center><H3>jimo shi jilao</H3></center>
 	<center><H2>jimo shi jilao</H2></center>
-	<center><H1>即墨是基佬</H1 style="color:red"></center>	
+	<center><H1>jimo shi jilao</H1></center>	
+	<center><span class="style1">寂寞是基佬</span></center>	
 </body>
 </html>
