--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-    <title>Hello Meijun!</title>
+    <title>你好，死基佬</title>
     <style type="text/css">
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
     margin:0;
@@ -60,7 +60,7 @@ body {
     width: 100%;
     position: absolute;
     z-index: 999;
-    background: url("http://lukesign.qiniudn.com/images/site/loading.gif") no-repeat center center #FFFAD1;
+    background: url("http://s7.mogucdn.com/pic/141230/3n6qy_ieytenbrgvstkmjzmuytambqhayde_785x500.gif") no-repeat center center #FFFAD1;
     top: 0;
     left: 0;
     text-align: center;
@@ -1080,7 +1080,7 @@ function showMarkerText() {
             loopAddMarker(markerText, function() {
                 setTimeout(function() {
                     slideDown('theEnd', 1000, function() {
-                        var theEndText = '<div id="theEndText">Happy birthday to my dearest Meijun :) --by LOO2K<br />' + 
+                        var theEndText = '<div id="theEndText">卓叔爱基佬<br />' + 
                                          '<button data-toggle="wshare" data-type="weibo">分享到微博</button>' + 
                                          '<button onclick="window.location.reload();">再看一次</button></div>';
                         document.getElementById('theEnd').innerHTML = theEndText;
