--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
     text-align: center;
     line-height: 300px;
     font-size: 32px;
-    color: #666;
+    color: #066;
 }
 #theEnd {
     height: 0%;
@@ -76,7 +76,7 @@ body {
     overflow: hidden;
     position: absolute;
     z-index: 999;
-    background-color: #FFFAD1;
+    background-color: #00FAD1;
     top: 0;
     left: 0;
 }
