--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
     width: 100%;
     position: absolute;
     z-index: 999;
-    background: url("http://s7.mogucdn.com/pic/141230/3n6qy_ieytenbrgvstkmjzmuytambqhayde_785x500.gif") no-repeat center center #FFFAD1;
+    background: url("http://s7.mogucdn.com/pic/141230/3n6qy_ieytenbrgvstkmjzmuytambqhayde_785x500.gif") no-repeat center center #F99991;
     top: 0;
     left: 0;
     text-align: center;
