--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
     font: 12px/1.8 'Microsoft Yahei','Helvetica Neue',Helvetica,Arial,Sans-serif;
     padding: 0;
     margin: 0;
-    color: #333333;
+    color: #003333;
 }
 
 #map {
@@ -60,13 +60,13 @@ body {
     width: 100%;
     position: absolute;
     z-index: 999;
-    background: url("http://s7.mogucdn.com/pic/141230/3n6qy_ieytenbrgvstkmjzmuytambqhayde_785x500.gif") no-repeat center center #FFFAD1;
+    background: url("http://s7.mogucdn.com/pic/141230/3n6qy_ieytenbrgvstkmjzmuytambqhayde_785x500.gif") no-repeat center center #F99991;
     top: 0;
     left: 0;
     text-align: center;
     line-height: 300px;
     font-size: 32px;
-    color: #666;
+    color: #066;
 }
 #theEnd {
     height: 0%;
@@ -76,7 +76,7 @@ body {
     overflow: hidden;
     position: absolute;
     z-index: 999;
-    background-color: #FFFAD1;
+    background-color: #00FAD1;
     top: 0;
     left: 0;
 }
